# zim-alpha

./: pyproject.toml
python/Zimular/: initproject.py
